<resources>
    <string name="app_name">SampleQuiz</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Prev</string>
    <string name="correct_Toast">Correct!</string>
    <string name="incorrect_Toast">Incorrect!</string>
    <string name="cheat_activity">Show answer</string>
    <string name="cheat">Cheat</string>
    <string name="cheat_textview">Are you sure you want to see the answer?</string>
    <string name="user_cheated">Cheating is wrong!</string>
    <string name="no_more">End of questions!</string>
    <string name="score">Score: </string>
    <string name="answered">This question had been answered!</string>

    <string name="textView"></string>
    <string name="question_oceans">The Pacific Ocean is larger than
the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea
and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river
in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest
freshwater lake.</string>

</resources>
