<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BEFFCF"
    tools:context="com.example.sara.samplequiz.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:text="@string/textView"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        app:layout_constraintRight_toLeftOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />


    <ImageView
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/right"
        tools:ignore="ContentDescription,MissingConstraints"
        android:contentDescription=""
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/false_button"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/false_button"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/false_button" />

    <ImageView
        android:id="@+id/prev_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/left"
        tools:ignore="ContentDescription"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/true_button"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@+id/true_button"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/true_button"
        app:layout_constraintHorizontal_bias="0.645" />


        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#07A330"
            android:text="@string/true_button"
            android:textColor="#FDFEFE"
            tools:ignore="ButtonStyle"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="80dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/false_button"
            android:layout_marginRight="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toBottomOf="@+id/false_button"
            app:layout_constraintTop_toTopOf="@+id/false_button" />

        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#07A330"
            android:text="@string/false_button"
            android:textColor="#FDFEFE"
            tools:ignore="ButtonStyle"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintTop_creator="1"
            android:layout_marginTop="168dp"
            app:layout_constraintTop_toTopOf="parent" />




    <Button
        android:id="@+id/button_cheat"
        android:layout_width="94dp"
        android:layout_height="51dp"
        android:text="@string/cheat"
        android:textColor="#FDFEFE"
        android:background="#07A330"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/prev_button"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/next_button"
        app:layout_constraintHorizontal_bias="0.418"
        android:layout_marginTop="222dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="7dp"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:text="ss" />


</android.support.constraint.ConstraintLayout>
